<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".views.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_create_account" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ed_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_conform_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/conformpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ed_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/str_create_account"
                app:layout_constraintTop_toBottomOf="@id/ed_conform_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/str_or"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btn_create_account" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/str_sign_in"
                app:layout_constraintTop_toBottomOf="@id/tv_or" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_or1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/str_or"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/str_sign_in_google"
                app:layout_constraintTop_toBottomOf="@id/tv_or1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crash"
                android:layout_marginTop="10sp"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in_google" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>