<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".views.SignInActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/str_sign_in"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edSignInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edSignInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edSignInEmail" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/str_sign_in"
        app:layout_constraintTop_toBottomOf="@id/edSignInPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/str_or"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_signIn2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_account2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/str_create_account"
        app:layout_constraintTop_toBottomOf="@id/tv_or" />

</androidx.constraintlayout.widget.ConstraintLayout>